Review YOURLS image usage doc to reflect latest changes (#2028)

--- a/yourls/stack.yml
+++ b/yourls/stack.yml
@@ -14,7 +14,8 @@ services:
       YOURLS_PASS: example_password
 
   mysql:
-    image: mysql:5.7
+    image: mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: example
+      MYSQL_DATABASE: yourls
