[README] Add comment about database host name (#2098)

--- a/mediawiki/stack.yml
+++ b/mediawiki/stack.yml
@@ -17,6 +17,7 @@ services:
       # this yaml and uncomment the following line and use compose to restart
       # the mediawiki service
       # - ./LocalSettings.php:/var/www/html/LocalSettings.php
+  # This key also defines the name of the database host used during setup instead of the default "localhost"
   database:
     image: mariadb
     restart: always
