mariadb: stack example to use MARIADB_ROOT_PASSWORD
Trying to use MariaDB names more so to highlight distinction
from MySQL.

--- a/mariadb/stack.yml
+++ b/mariadb/stack.yml
@@ -7,7 +7,7 @@ services:
     image: mariadb
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: example
+      MARIADB_ROOT_PASSWORD: example
 
   adminer:
     image: adminer
